dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/rq/rq.h)

AM_INIT_AUTOMAKE(riskquantify, 0.8.1)

AC_CONFIG_MACRO_DIR([m4])

dnl Checks for programs.
AC_PROG_CC
dnl AC_PROG_RANLIB
AC_PROG_LIBTOOL
AM_PROG_CC_C_O

dnl AM_PATH_PYTHON(2.3)
dnl AC_PROG_SWIG(1.3.21)
dnl SWIG_PYTHON

AC_ARG_ENABLE(fpml, 
[  --enable-fpml         Enable FpML support], , enable_fpml=no)
AM_CONDITIONAL(enable_fpml, test "x$enable_fpml" = "xyes")

AC_ARG_ENABLE(swig, 
[  --enable-swig         Enable use of SWIG to generate scripting support], , enable_swig=no)
AM_CONDITIONAL(enable_swig, test "x$enable_swig" = "xyes")

AC_ARG_ENABLE(gtk-apps, 
[  --enable-gtk-apps     Enable generation of the GTK-based applications], , enable_gtk_apps=no)
AM_CONDITIONAL(enable_gtk_apps, test "x$enable_gtk_apps" = "xyes")

AC_ARG_ENABLE(docs,
[  --enable-docs    Enable documenation generation],
[case "${enableval}" in
  yes) enable_docs=true ;;
  no)  enable_docs=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-docs) ;;
esac],[enable_docs=false])
AM_CONDITIONAL(ENABLEDOCS, test x$enable_docs = xtrue)

AC_ARG_ENABLE(debug,
[  --enable-debug    Enable debugging flags],
[case "${enableval}" in
  yes) enable_debug=true ;;
  no)  enable_debug=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],[enable_debug=false])
AM_CONDITIONAL(DBG, test x$enable_debug = xtrue)

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_STRUCT_TM

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup)
AC_CHECK_FUNCS(stricmp strcasecmp)

eval `perl -V:archlibexp`
AC_SUBST(archlibexp)

AC_OUTPUT(
Makefile 
src/Makefile 
src/rq/Makefile 
)
