
if DBG
DBGFLAGS=-g
else
DBGFLAGS=-O2
endif

AM_CFLAGS = $(DBGFLAGS)

# SUBDIRS = fpml msvc bcb

lib_LIBRARIES = librq.a

lib_LTLIBRARIES = librq.la

librq_a_SOURCES = \
	rq_address.c \
	rq_adjustable_date.c \
	rq_array.c \
	rq_array_double.c \
	rq_array_partitioned.c \
	rq_asset.c \
	rq_asset_asset_correlation.c \
	rq_asset_base_correlation.c \
	rq_asset_ccy.c \
	rq_asset_ccypair.c \
	rq_asset_cds_spread.c \
	rq_asset_commodity.c \
	rq_asset_correlation.c \
	rq_asset_correlation_mgr.c \
	rq_asset_credit_spread.c \
	rq_asset_dividend_yield.c \
	rq_asset_electricity.c \
	rq_asset_equity.c \
	rq_asset_equityvol.c \
	rq_asset_floating_rate_index.c \
	rq_asset_future.c \
	rq_asset_fxvol.c \
	rq_asset_irbond.c \
	rq_asset_irdiscount.c \
	rq_asset_irfuture.c \
	rq_asset_irovernight.c \
	rq_asset_irswap.c \
	rq_asset_irvol.c \
	rq_asset_list.c \
	rq_asset_mgr.c \
	rq_asset_property.c \
	rq_asset_recovery_rate.c \
	rq_asset_swaption.c \
	rq_asset_termstruct_mapping.c \
	rq_asset_termstruct_mapping_mgr.c \
	rq_assetflow.c \
	rq_assetflow_list.c \
	rq_bootstrap_adapter.c \
	rq_bootstrap_adapter_cds_curve.c \
	rq_bootstrap_adapter_equity_curve_simple.c \
	rq_bootstrap_adapter_forward_curve_bbi.c \
	rq_bootstrap_adapter_forward_curve_crossccy.c \
	rq_bootstrap_adapter_forward_curve_simple.c \
	rq_bootstrap_adapter_future_curve_simple.c \
	rq_bootstrap_adapter_ir_vol_surface.c \
	rq_bootstrap_adapter_mgr.c \
	rq_bootstrap_adapter_spread_curve_simple.c \
	rq_bootstrap_adapter_vol_surface_simple.c \
	rq_bootstrap_adapter_yield_curve.c \
	rq_bootstrap_adapter_yield_curve_composite.c \
	rq_bootstrap_adapter_yield_curve_cubic_spline.c \
	rq_bootstrap_adapter_yield_curve_day_count.c \
	rq_bootstrap_adapter_yield_curve_simple.c \
	rq_bootstrap_adapter_yield_curve_spread.c \
	rq_bootstrap_cds_curve.c \
	rq_bootstrap_config.c \
	rq_bootstrap_config_mgr.c \
	rq_bootstrap_dependency_list.c \
	rq_bootstrap_equity_curve_simple.c \
	rq_bootstrap_forward_curve_bbi.c \
	rq_bootstrap_forward_curve_crossccy.c \
	rq_bootstrap_forward_curve_implied.c \
	rq_bootstrap_forward_curve_simple.c \
	rq_bootstrap_future_curve_simple.c \
	rq_bootstrap_ir_vol_surface.c \
	rq_bootstrap_spread_curve_simple.c \
	rq_bootstrap_vol_surface_simple.c \
	rq_bootstrap_yield_curve.c \
	rq_bootstrap_yield_curve_composite.c \
	rq_bootstrap_yield_curve_cubic_spline.c \
	rq_bootstrap_yield_curve_day_count.c \
	rq_bootstrap_yield_curve_simple.c \
	rq_bootstrap_yield_curve_spread.c \
	rq_business_center.c \
	rq_business_center_mgr.c \
	rq_business_center_time.c \
	rq_business_centers.c \
	rq_business_day_adjustments.c \
	rq_calendar.c \
	rq_calendar_mgr.c \
	rq_cds_curve.c \
	rq_cds_curve_mgr.c \
	rq_currency_flow.c \
	rq_date.c \
	rq_date_cache_generator.c \
	rq_date_event.c \
	rq_date_roll.c \
	rq_datehour.c \
	rq_datetime.c \
	rq_day_count.c \
	rq_dividend.c \
	rq_dom_parser.c \
	rq_double_linked_list.c \
	rq_electricity_curve.c \
	rq_enum.c \
	rq_equity_curve.c \
	rq_equity_curve_mgr.c \
	rq_exchange_rate.c \
	rq_exchange_rate_mgr.c \
	rq_external_termstruct_mgr.c \
	rq_floating_flow.c \
	rq_floating_flow_list.c \
	rq_forward_curve.c \
	rq_forward_curve_mgr.c \
	rq_forward_rate.c \
	rq_forward_rate_imply.c \
	rq_future_curve.c \
	rq_future_curve_mgr.c \
	rq_future_price.c \
	rq_fx_cash_settlement.c \
	rq_fx_fixing.c \
	rq_fx_leg.c \
	rq_fx_rate.c \
	rq_hashtable.c \
	rq_information_source.c \
	rq_init.c \
	rq_intermediary_information.c \
	rq_interpolate.c \
	rq_interpreter.c \
	rq_interpreter_builtin_core.c \
	rq_interpreter_builtin_math.c \
	rq_interpreter_builtin_string.c \
	rq_interpreter_error.c \
	rq_ir_vol_surface.c \
	rq_ir_vol_surface_mgr.c \
	rq_iterator.c \
	rq_linked_list.c \
	rq_market.c \
	rq_market_mgr.c \
	rq_market_requirements.c \
	rq_math.c \
	rq_matrix.c \
	rq_memdbg.c \
	rq_money.c \
	rq_named_variant_mgr.c \
	rq_object.c \
	rq_object_builder.c \
	rq_object_builder_xml.c \
	rq_object_schema.c \
	rq_object_schema_mgr.c \
	rq_object_schema_node.c \
	rq_perturbation_mgr.c \
	rq_portfolio.c \
	rq_pricing_average.c \
	rq_pricing_barone_adesi_whaley.c \
	rq_pricing_binomial.c \
	rq_pricing_bjerksund_stensland.c \
	rq_pricing_blackscholes.c \
	rq_pricing_blackscholes_french.c \
	rq_pricing_bondopt.c \
	rq_pricing_chooser_complex.c \
	rq_pricing_chooser_simple.c \
	rq_pricing_compound.c \
	rq_pricing_digital.c \
	rq_pricing_digital_barrier.c \
	rq_pricing_discount.c \
	rq_pricing_double_barrier.c \
	rq_pricing_double_digital.c \
	rq_pricing_engine.c \
	rq_pricing_extendible_maturity.c \
	rq_pricing_extreme_spread.c \
	rq_pricing_finite_differences.c \
	rq_pricing_forward_start.c \
	rq_pricing_fra.c \
	rq_pricing_futureopt.c \
	rq_pricing_fx.c \
	rq_pricing_helper.c \
	rq_pricing_jennergren_naslund.c \
	rq_pricing_jumpdiffusion.c \
	rq_pricing_lookback.c \
	rq_pricing_miltersen_schwartz.c \
	rq_pricing_monte_carlo.c \
	rq_pricing_monte_carlo_multi_factor.c \
	rq_pricing_normdist.c \
	rq_pricing_partial_barrier.c \
	rq_pricing_partial_double_barrier.c \
	rq_pricing_result.c \
	rq_pricing_roll_geske_whaley.c \
	rq_pricing_single_barrier.c \
	rq_pricing_spread.c \
	rq_pricing_swaption.c \
	rq_pricing_time_switch.c \
	rq_product.c \
	rq_product_fx_single_leg.c \
	rq_product_handler.c \
	rq_product_handler_mgr.c \
	rq_product_termstruct_mapping.c \
	rq_product_termstruct_mapping_mgr.c \
	rq_quoted_currency_pair.c \
	rq_random.c \
	rq_rate.c \
	rq_rate_class.c \
	rq_rate_class_mgr.c \
	rq_rate_conversions.c \
	rq_rate_mgr.c \
	rq_routing.c \
	rq_routing_explicit_details.c \
	rq_routing_ids.c \
	rq_set_rb.c \
	rq_settlement_information.c \
	rq_settlement_instruction.c \
	rq_side_rate.c \
	rq_side_rates.c \
	rq_split_settlement.c \
	rq_spot_price.c \
	rq_spot_price_mgr.c \
	rq_spread_curve.c \
	rq_spread_curve_mgr.c \
	rq_state_machine.c \
	rq_statistics.c \
	rq_stream.c \
	rq_stream_file.c \
	rq_stream_string.c \
	rq_street_address.c \
	rq_string_list.c \
	rq_string_set.c \
	rq_symbol_table.c \
	rq_system.c \
	rq_term.c \
	rq_termstruct.c \
	rq_termstruct_cache.c \
	rq_termstruct_mapping.c \
	rq_termstruct_mapping_mgr.c \
	rq_time.c \
	rq_tokenizer.c \
	rq_trade.c \
	rq_trade_list.c \
	rq_trade_mgr.c \
	rq_tree_rb.c \
	rq_type_id_mgr.c \
	rq_user.c \
	rq_user_mgr.c \
	rq_variant.c \
	rq_vector.c \
	rq_vol_curve.c \
	rq_vol_surface.c \
	rq_vol_surface_mgr.c \
	rq_volatility.c \
	rq_xml_node.c \
	rq_xml_parser.c \
	rq_xml_util.c \
	rq_yield_curve.c \
	rq_yield_curve_mgr.c

librq_la_SOURCES = $(librq_a_SOURCES)

pkginclude_HEADERS = \
	rq.h \
	rq_address.h \
	rq_adjustable_date.h \
	rq_array.h \
	rq_array_double.h \
	rq_array_partitioned.h \
	rq_asset.h \
	rq_asset_asset_correlation.h \
	rq_asset_base_correlation.h \
	rq_asset_ccy.h \
	rq_asset_ccypair.h \
	rq_asset_cds_spread.h \
	rq_asset_commodity.h \
	rq_asset_correlation.h \
	rq_asset_correlation_mgr.h \
	rq_asset_credit_spread.h \
	rq_asset_dividend_yield.h \
	rq_asset_electricity.h \
	rq_asset_equity.h \
	rq_asset_equityvol.h \
	rq_asset_floating_rate_index.h \
	rq_asset_future.h \
	rq_asset_fxvol.h \
	rq_asset_irbond.h \
	rq_asset_irdiscount.h \
	rq_asset_irfuture.h \
	rq_asset_irovernight.h \
	rq_asset_irswap.h \
	rq_asset_irvol.h \
	rq_asset_list.h \
	rq_asset_mgr.h \
	rq_asset_property.h \
	rq_asset_recovery_rate.h \
	rq_asset_swaption.h \
	rq_asset_termstruct_mapping.h \
	rq_asset_termstruct_mapping_mgr.h \
	rq_assetflow.h \
	rq_assetflow_list.h \
	rq_bootstrap_adapter.h \
	rq_bootstrap_adapter_cds_curve.h \
	rq_bootstrap_adapter_equity_curve_simple.h \
	rq_bootstrap_adapter_forward_curve_bbi.h \
	rq_bootstrap_adapter_forward_curve_crossccy.h \
	rq_bootstrap_adapter_forward_curve_simple.h \
	rq_bootstrap_adapter_future_curve_simple.h \
	rq_bootstrap_adapter_ir_vol_surface.h \
	rq_bootstrap_adapter_mgr.h \
	rq_bootstrap_adapter_spread_curve_simple.h \
	rq_bootstrap_adapter_vol_surface_simple.h \
	rq_bootstrap_adapter_yield_curve.h \
	rq_bootstrap_adapter_yield_curve_composite.h \
	rq_bootstrap_adapter_yield_curve_cubic_spline.h \
	rq_bootstrap_adapter_yield_curve_day_count.h \
	rq_bootstrap_adapter_yield_curve_simple.h \
	rq_bootstrap_adapter_yield_curve_spread.h \
	rq_bootstrap_cds_curve.h \
	rq_bootstrap_config.h \
	rq_bootstrap_config_mgr.h \
	rq_bootstrap_dependency_list.h \
	rq_bootstrap_equity_curve_simple.h \
	rq_bootstrap_forward_curve_bbi.h \
	rq_bootstrap_forward_curve_crossccy.h \
	rq_bootstrap_forward_curve_implied.h \
	rq_bootstrap_forward_curve_simple.h \
	rq_bootstrap_future_curve_simple.h \
	rq_bootstrap_ir_vol_surface.h \
	rq_bootstrap_spread_curve_simple.h \
	rq_bootstrap_vol_surface_simple.h \
	rq_bootstrap_yield_curve.h \
	rq_bootstrap_yield_curve_composite.h \
	rq_bootstrap_yield_curve_cubic_spline.h \
	rq_bootstrap_yield_curve_day_count.h \
	rq_bootstrap_yield_curve_simple.h \
	rq_bootstrap_yield_curve_spread.h \
	rq_business_center.h \
	rq_business_center_mgr.h \
	rq_business_center_time.h \
	rq_business_centers.h \
	rq_business_day_adjustments.h \
	rq_calendar.h \
	rq_calendar_mgr.h \
	rq_cds_curve.h \
	rq_cds_curve_mgr.h \
	rq_config.h \
	rq_currency_flow.h \
	rq_date.h \
	rq_date_cache_initialisation.h \
	rq_date_event.h \
	rq_date_roll.h \
	rq_datehour.h \
	rq_datetime.h \
	rq_day_count.h \
	rq_defs.h \
	rq_dividend.h \
	rq_dom_parser.h \
	rq_double_linked_list.h \
	rq_electricity_curve.h \
	rq_enum.h \
	rq_equity_curve.h \
	rq_equity_curve_mgr.h \
	rq_error.h \
	rq_exchange_rate.h \
	rq_exchange_rate_mgr.h \
	rq_external_termstruct_mgr.h \
	rq_floating_flow.h \
	rq_floating_flow_list.h \
	rq_forward_curve.h \
	rq_forward_curve_mgr.h \
	rq_forward_rate.h \
	rq_forward_rate_imply.h \
	rq_future_curve.h \
	rq_future_curve_mgr.h \
	rq_future_price.h \
	rq_fx_cash_settlement.h \
	rq_fx_fixing.h \
	rq_fx_leg.h \
	rq_fx_rate.h \
	rq_hashtable.h \
	rq_information_source.h \
	rq_init.h \
	rq_intermediary_information.h \
	rq_interpolate.h \
	rq_interpreter.h \
	rq_interpreter_builtin_core.h \
	rq_interpreter_builtin_math.h \
	rq_interpreter_builtin_string.h \
	rq_interpreter_error.h \
	rq_ir_vol_surface.h \
	rq_ir_vol_surface_mgr.h \
	rq_iterator.h \
	rq_linked_list.h \
	rq_market.h \
	rq_market_mgr.h \
	rq_market_requirements.h \
	rq_math.h \
	rq_matrix.h \
	rq_memdbg.h \
	rq_money.h \
	rq_named_variant_mgr.h \
	rq_object.h \
	rq_object_builder.h \
	rq_object_builder_xml.h \
	rq_object_schema.h \
	rq_object_schema_mgr.h \
	rq_object_schema_node.h \
	rq_perturbation_mgr.h \
	rq_portfolio.h \
	rq_pricing_adapter.h \
	rq_pricing_average.h \
	rq_pricing_barone_adesi_whaley.h \
	rq_pricing_binomial.h \
	rq_pricing_bjerksund_stensland.h \
	rq_pricing_blackscholes.h \
	rq_pricing_blackscholes_french.h \
	rq_pricing_bondopt.h \
	rq_pricing_chooser_complex.h \
	rq_pricing_chooser_simple.h \
	rq_pricing_compound.h \
	rq_pricing_digital.h \
	rq_pricing_digital_barrier.h \
	rq_pricing_discount.h \
	rq_pricing_double_barrier.h \
	rq_pricing_double_digital.h \
	rq_pricing_engine.h \
	rq_pricing_extendible_maturity.h \
	rq_pricing_extreme_spread.h \
	rq_pricing_finite_differences.h \
	rq_pricing_forward_start.h \
	rq_pricing_fra.h \
	rq_pricing_futureopt.h \
	rq_pricing_fx.h \
	rq_pricing_helper.h \
	rq_pricing_jennergren_naslund.h \
	rq_pricing_jumpdiffusion.h \
	rq_pricing_lookback.h \
	rq_pricing_miltersen_schwartz.h \
	rq_pricing_monte_carlo.h \
	rq_pricing_monte_carlo_multi_factor.h \
	rq_pricing_normdist.h \
	rq_pricing_partial_barrier.h \
	rq_pricing_partial_double_barrier.h \
	rq_pricing_request.h \
	rq_pricing_result.h \
	rq_pricing_roll_geske_whaley.h \
	rq_pricing_single_barrier.h \
	rq_pricing_spread.h \
	rq_pricing_swaption.h \
	rq_pricing_time_switch.h \
	rq_product.h \
	rq_product_fx_single_leg.h \
	rq_product_handler.h \
	rq_product_handler_mgr.h \
	rq_product_termstruct_mapping.h \
	rq_product_termstruct_mapping_mgr.h \
	rq_quoted_currency_pair.h \
	rq_random.h \
	rq_rate.h \
	rq_rate_class.h \
	rq_rate_class_mgr.h \
	rq_rate_conversions.h \
	rq_rate_mgr.h \
	rq_routing.h \
	rq_routing_explicit_details.h \
	rq_routing_ids.h \
	rq_set_rb.h \
	rq_settlement_information.h \
	rq_settlement_instruction.h \
	rq_side_rate.h \
	rq_side_rates.h \
	rq_simulation_results.h \
	rq_split_settlement.h \
	rq_spot_price.h \
	rq_spot_price_mgr.h \
	rq_spread_curve.h \
	rq_spread_curve_mgr.h \
	rq_state_machine.h \
	rq_statistics.h \
	rq_stream.h \
	rq_stream_file.h \
	rq_stream_string.h \
	rq_street_address.h \
	rq_string_list.h \
	rq_string_set.h \
	rq_symbol_table.h \
	rq_system.h \
	rq_term.h \
	rq_termstruct.h \
	rq_termstruct_cache.h \
	rq_termstruct_mapping.h \
	rq_termstruct_mapping_mgr.h \
	rq_time.h \
	rq_tokenizer.h \
	rq_trade.h \
	rq_trade_list.h \
	rq_trade_mgr.h \
	rq_trade_status.h \
	rq_tree_rb.h \
	rq_type_id_mgr.h \
	rq_user.h \
	rq_user_mgr.h \
	rq_variant.h \
	rq_vector.h \
	rq_vol_curve.h \
	rq_vol_surface.h \
	rq_vol_surface_mgr.h \
	rq_volatility.h \
	rq_xml_node.h \
	rq_xml_parser.h \
	rq_xml_util.h \
	rq_yield_curve.h \
	rq_yield_curve_mgr.h

librq_a_CFLAGS = -I.

librq_la_CFLAGS = -I.
